--- a/index.html
+++ b/index.html
@@ -1,104 +1,103 @@
-	<!doctype html>
-	<html>
-	<head>
-		<meta charset="utf-8">
+		<!doctype html>
+		<html>
+		<head>
+			<meta charset="utf-8">
 
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="estilos.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+			<link rel="stylesheet" type="text/css" href="estilos.css">
+			<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<body>
-			<div class="container">
-				<h2>Sobre Nós</h2>
-				<img class="img-responsive" src="img/empresa.jpg">
+			<body>
+				<section class="container">
+					<h2>Sobre Nós</h2>
+					<img class="img-responsive" src="img/empresa.jpg">
 
-				<div class="panel-group" id="paineis-pai">
-					<div class="panel panel-default">
-						<div class="panel-heading">
-						<h1 class="panel-title" data-toggle="collapse" data-target="#primeiro" data-parent="#paineis-pai">Desde 1935</h1>
+					<div class="panel-group" id="paineis-pai">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+							<h1 class="panel-title" data-toggle="collapse" data-target="#primeiro" data-parent="#paineis-pai">Desde 1935</h1>
+							</div>
+							<div class="collapse" id="primeiro">
+								<div class="panel-body"><p >Desde 1935 trazendo casas, mansões e prédios lindos para o mundo.</p>
+								</div>
+							</div>
 						</div>
-						<div class="collapse" id="primeiro">
-							<div class="panel-body"><p >Desde 1935 trazendo casas, mansões e prédios lindos para o mundo.</p>
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<h3 class="panel-title" data-toggle="collapse" data-target="#segundo" data-parent="#paineis-pai">Preços Acessíveis</h3>
+							</div>
+							<div class="collapse" id="segundo">
+								<div class="panel-body"><p >Melhores preços sempre. Pode pesquisar.</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<h3 class="panel-title" data-toggle="collapse" data-target="#terceiro" data-parent="#paineis-pai">Alegria para um mundo mais bonito</h3>
+							</div>
+							<div class="collapse" id="terceiro"><div class="panel-body"><p >Sempre ajudando para fazer, tornar o nosso mundo mais bonito.</p>
 							</div>
 						</div>
 					</div>
-
-
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<h3 class="panel-title" data-toggle="collapse" data-target="#segundo" data-parent="#paineis-pai">Preços Acessíveis</h3>
-						</div>
-						<div class="collapse" id="segundo">
-							<div class="panel-body"><p >Melhores preços sempre. Pode pesquisar.</p>
-							</div>
-						</div>
-					</div>
-
-
-
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<h3 class="panel-title" data-toggle="collapse" data-target="#terceiro" data-parent="#paineis-pai">Alegria para um mundo mais bonito</h3>
-						</div>
-						<div class="collapse" id="terceiro"><div class="panel-body"><p >Sempre ajudando para fazer, tornar o nosso mundo mais bonito.</p>
-						</div>
-					</div>
-
 				</div>
+			</section>
+
+			<div class="jumbotron">
+			<div class="container">
+			<h3>Mais de 300 prêmios em design e em conforto.</h3>
+			<p>Mais de 5 milhões de clientes satisfeitos em todo o mundo.</p>
 			</div>
-		</div>
+			</div>		
+			
+
+			<section class="container">
+			<h2>Nossos Projetos</h2>
+
+			<figure class="thumbnail">
+		      <img src="img/projetos/casa-castelo.png">
+		      <figcaption class="caption">
+		        <h3>Casa Castelo</h3>
+		        <p>A Casa Castelo é o último lançamento da TopCasaFina Arquitetura, feita para um monge.</p>        
+		      </figcaption>
+		    </figure>
+
+		    <figure class="thumbnail">
+		      <img src="img/projetos/casa-lago.png">
+		      <figcaption class="caption">
+		        <h3>Casa Lago</h3>
+		        <p>A Casa do Lago foi lar de inúmeras pessoas que conheciam o presidente da época.</p>        
+		      </figcaption>
+		    </figure>
+
+		    <figure class="thumbnail">
+		      <img src="img/projetos/mercado-marapira.png">
+		      <figcaption class="caption">
+		        <h3>Mercado Marapira</h3>
+		        <p>O mercado marapira foi projetado nos minimos detalhes na arquitetura baseada em frutas.</p>        
+		      </figcaption>
+		    </figure>
+
+		    <figure class="thumbnail">
+		      <img src="img/projetos/palacio-dionisio.png">
+		      <figcaption class="caption">
+		        <h3>Palácio Dionísio</h3>
+		        <p>O Palácio Dionísio foi eleito pela revista "Grandes Palácios" como o palácio mais lindo do mundo.</p>        
+		      </figcaption>
+		    </figure>
+
+		    <figure class="thumbnail">
+		      <img src="img/projetos/residencia-ludi.png">
+		      <figcaption class="caption">
+		        <h3>Residência Ludi</h3>
+		        <p>A Residência Ludi foi projetada para ser a mais bela casa de São Paulo pela revists Housing.</p>        
+		      </figcaption>
+		    </figure>
+			</section>
 
 
-		<div class="container">
-		<h2>Nossos Projetos</h2>
-
-		<figure class="thumbnail">
-	      <img src="img/projetos/casa-castelo.png">
-	      <figcaption class="caption">
-	        <h3>Casa Castelo</h3>
-	        <p>A Casa Castelo é o ultimo lançamento. Venha conferir.</p>        
-	      </figcaption>
-	    </figure>
-
-	    <figure class="thumbnail">
-	      <img src="img/projetos/casa-castelo.png">
-	      <figcaption class="caption">
-	        <h3>Casa Castelo</h3>
-	        <p>A Casa Castelo é o ultimo lançamento. Venha conferir.</p>        
-	      </figcaption>
-	    </figure>
-
-	    <figure class="thumbnail">
-	      <img src="img/projetos/casa-castelo.png">
-	      <figcaption class="caption">
-	        <h3>Casa Castelo</h3>
-	        <p>A Casa Castelo é o ultimo lançamento. Venha conferir.</p>        
-	      </figcaption>
-	    </figure>
-
-	    <figure class="thumbnail">
-	      <img src="img/projetos/casa-castelo.png">
-	      <figcaption class="caption">
-	        <h3>Casa Castelo</h3>
-	        <p>A Casa Castelo é o ultimo lançamento. Venha conferir.</p>        
-	      </figcaption>
-	    </figure>
-
-	    <figure class="thumbnail">
-	      <img src="img/projetos/casa-castelo.png">
-	      <figcaption class="caption">
-	        <h3>Casa Castelo</h3>
-	        <p>A Casa Castelo é o ultimo lançamento. Venha conferir.</p>        
-	      </figcaption>
-	    </figure>
-
-
-
-		</div>
-
-
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		</body>
-		</head>
-		</html>
+				<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+				<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+			</body>
+			</head>
+			</html>
